--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "devtools": "^8.40.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
