Update configuration to use valid options for Launch Templates

--- a/backend/.ebextensions/launchtemplate.config
+++ b/backend/.ebextensions/launchtemplate.config
@@ -1,5 +1,3 @@
 option_settings:
-  aws:autoscaling:launchconfiguration:
-    LaunchConfigurationName: null
-  aws:elasticbeanstalk:environment:
-    LaunchType: LaunchTemplate
+  aws:ec2:instances:
+    InstanceTypes: t3.micro
