Start aws setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,21 @@
-FROM python:3.13.0-alpine3.20
+# Use official Python runtime as a parent image
+FROM python:3.9-slim
 
+# Set environment variables
+ENV PYTHONUNBUFFERED=1
+
+# Set the working directory
 WORKDIR /app
 
+# Install dependencies
 COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the application code
 COPY . .
 
-CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
-# SHELL ["/bin/zsh", "-c"]
+# Expose the port Gunicorn will run on
+EXPOSE 8000
+
+# Run the application with Gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi:application"]
