--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@ dist/
 .idea/                 # For JetBrains IDEs like PyCharm
 *.sublime-project
 *.sublime-workspace
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
