--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,16 @@
-# Use official Python runtime as a parent image
-FROM python:3.9-slim
+FROM python:3.10-slim
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1
-
-# Set the working directory
 WORKDIR /app
 
 # Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code
+# Copy the project files
 COPY . .
 
-# Expose the port Gunicorn will run on
+# Expose the application port
 EXPOSE 8000
 
-# Run the application with Gunicorn
+# Start the application using Gunicorn
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi:application"]
